--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
 
 	//To logs
 	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
@@ -34,11 +35,12 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.12'
 	annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
-	testCompileOnly 'org.projectlombok:lombok:1.18.12'
-	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
-
 	compile group: 'com.google.inject', name: 'guice', version: '4.2.3'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+    testCompileOnly 'org.projectlombok:lombok:1.18.12'
+	testCompile group: 'org.mockito', name: 'mockito-core', version: '3.5.13'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
