--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # Ignore Gradle project-specific cache directory
 .settings
+.classpath
+.gradle
+.project
 
 # Ignore Gradle build output directory
 build
 bin
-.gitignore
